# wimu-agorski-okrupa

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  design_proposal.md  dokumentacja_końcowa.md  pyproject.toml  setup.py  test_deploy_model.py
.dvc/: config
config/: dataset.yml  deployment.yml  training.yml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: fit-profile.txt.txt  irmas.ipynb
src/data/: class_conditional_dataset.py  dataset_handler.py  episode_dataset.py  good_sounds.py  irmas.py  make_dataset.py  medley_solos_db.py  tinysol.py
src/deployment/: deploy.py  inference.py  serve_model.py
src/models/: few_shot_learner.py  few_shot_learner_ksoft.py  few_shot_learner_ksoft_distractor.py  irmas.py  models.py  prototypical_net_ksoft.py  prototypical_net_ksoft_distractor.py  train_model.py  trainer.py
src/types/: config.py  dataset.py  endpoint.py  model.py
src/utils/: yaml_utils.py
tests/e2e/: test_e2e.py
