[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["adamsebastiangorski <adamsebastiangorski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"
dagshub = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
