[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["adamsebastiangorski <adamsebastiangorski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"
dagshub = "^0.3.9"
dvc = "2.58.2"
dvc-s3 = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
