[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["adamsebastiangorski <adamsebastiangorski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"
dagshub = "^0.3.9"
dvc = "2.58.2"
dvc-s3 = "^2.23.0"
poethepoet = "^0.24.4"
mirdata = "^0.3.8"
numpy = "^1.26.2"
torchmetrics = "0.10.2"
scikit-learn = "^1.3.2"
kaleido = "0.2.0"
music-fsl = "^0.1.6"
torch = {version = "^2.1.1+cu118", source = "pytorch"}
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
torchaudio = {version = "^2.1.1+cu118", source = "pytorch"}
torchvision = {version = "^0.16.1+cu118", source = "pytorch"}
lightning = "^2.1.2"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pyyaml = "^6.0.1"
autopep8 = "^2.0.4"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==2.0.1+cu117 -f https://download.pytorch.org/whl/torch_stable.html"
